.next/dev/logs/next-development.log
[00:00:00.918] Server  LOG     ✓ Ready in 599ms
[00:00:07.890] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:18:25.620] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:18:27.755] Server  LOG     ✓ Compiled in 44ms
[00:18:27.858] Browser ERROR   ./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: C:\Users\User\Desktop\New folder\gaming-link-bio\src\app\globals.css:19:1: Unexpected }
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at Parser.unexpectedClose (turbopack:///[project]/node_modules/postcss/lib/parser.js:587:22)]
    [at Parser.end (turbopack:///[project]/node_modules/postcss/lib/parser.js:330:12)]
    [at Parser.parse (turbopack:///[project]/node_modules/postcss/lib/parser.js:456:16)]
    [at parse (turbopack:///[project]/node_modules/postcss/lib/parse.js:11:12)]
    [at new LazyResult (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:165:16)]
    [at Processor.process (turbopack:///[project]/node_modules/postcss/lib/processor.js:53:14)]
    [at transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:51)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:29)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:115:11)]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]
[00:18:28.581] Browser ERROR   ./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: C:\Users\User\Desktop\New folder\gaming-link-bio\src\app\globals.css:19:1: Unexpected }
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at Parser.unexpectedClose (turbopack:///[project]/node_modules/postcss/lib/parser.js:587:22)]
    [at Parser.end (turbopack:///[project]/node_modules/postcss/lib/parser.js:330:12)]
    [at Parser.parse (turbopack:///[project]/node_modules/postcss/lib/parser.js:456:16)]
    [at parse (turbopack:///[project]/node_modules/postcss/lib/parse.js:11:12)]
    [at new LazyResult (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:165:16)]
    [at Processor.process (turbopack:///[project]/node_modules/postcss/lib/processor.js:53:14)]
    [at transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:51)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:29)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:115:11)]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]
[00:23:17.038] Server  ERROR   ⨯ ./src/app/globals.css:1889:8
Parsing CSS source code failed
  1887 | }
  1888 |
> 1889 | @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;600;700&family=Noto+Sans+Myanmar:wght@300;400;600;700;900&display=swap');
       |        ^
  1890 |
  1891 | :root {
  1892 |   --luxury-gold: #d4af37;

@import rules must precede all rules aside from @charset and @layer statements

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]


[00:23:17.487] Browser ERROR   uncaughtError: Error: ./src/app/globals.css:1889:8
Parsing CSS source code failed
  1887 | }
  1888 |
> 1889 | @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;600;700&family=Noto+Sans+Myanmar:wght@300;400;600;700;900&display=swap');
       |        ^
  1890 |
  1891 | :root {
  1892 |   --luxury-gold: #d4af37;

@import rules must precede all rules aside from @charset and @layer statements

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]


[00:23:17.662] Browser ERROR   ./src/app/globals.css:1889:8
Parsing CSS source code failed
  1887 | }
  1888 |
> 1889 | @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;600;700&family=Noto+Sans+Myanmar:wght@300;400;600;700;900&display=swap');
       |        ^
  1890 |
  1891 | :root {
  1892 |   --luxury-gold: #d4af37;

@import rules must precede all rules aside from @charset and @layer statements

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]
[00:23:17.662] Browser ERROR   ./src/app/globals.css:1889:8
Parsing CSS source code failed
  1887 | }
  1888 |
> 1889 | @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;600;700&family=Noto+Sans+Myanmar:wght@300;400;600;700;900&display=swap');
       |        ^
  1890 |
  1891 | :root {
  1892 |   --luxury-gold: #d4af37;

@import rules must precede all rules aside from @charset and @layer statements

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]
[00:30:36.899] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:31:16.570] Server  LOG     ✓ Compiled in 45ms
